fix border-bottom, center button, separate icon from text and align arrows #10

--- a/src/scss/layout/_share.scss
+++ b/src/scss/layout/_share.scss
@@ -1,111 +1,127 @@
 .wrapper {
-  margin: 0px 20px 0px 23px;
+    margin: 0px 20px 0px 23px;
 
-  @include tablet {
-    margin: 0;
-  }
+    @include tablet {
+        margin: 0;
+    }
 }
 
 .share {
-  border-bottom: 1px solid $white-two;
-  display: flex;
-  flex-direction: column;
-  align-content: center;
+    border-bottom: 1px solid $white-two;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
 }
 
 .share__tab {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-top: 10px;
-  padding-bottom: 10px;
-
-  &--description {
-    display: inline-flex;
+    display: flex;
+    justify-content: space-between;
     align-items: center;
-  }
+    padding-top: 10px;
+    padding-bottom: 10px;
+
+    &--description {
+        display: inline-flex;
+        align-items: center;
+    }
 }
 
 .tab__image {
-  flex-shrink: 0;
-  color: $orange;
-  padding-right: 12px;
+    flex-shrink: 0;
+    color: $orange;
+    padding-right: 12px;
 }
 
 .tab__text {
-  font-family: 'Open Sans', sans-serif;
-  color: $color-dark-green;
-  font-size: 1.125em;
-  text-transform: uppercase;
+    font-family: 'Open Sans', sans-serif;
+    color: $color-dark-green;
+    font-size: 1.125em;
+    text-transform: uppercase;
 }
 
 .tab__icon {
-  flex-shrink: 0;
-  color: $gunmetal;
-  align-self: right;
+    flex-shrink: 0;
+    color: $gunmetal;
+    align-self: right;
 }
 
 .form__button {
-  width: 199px;
-  height: 50px;
-  text-transform: uppercase;
-  border: none;
-  border-radius: 12px;
-  font-family: 'Open Sans';
-  font-size: 18px;
-  font-weight: 600;
-  margin: 30px auto;
-  cursor: pointer;
-  /*ACTIVE*/
-  background-color: $orange;
-  color: $white;
-  box-shadow: 0 1px 6px 0 rgba(0, 0, 0, 0.32);
-  /*INACTIVE*/
-  // background-color: #d5d5d5;
-  // box-shadow: none;
+    width: 199px;
+    height: 50px;
+    text-transform: uppercase;
+    border: none;
+    border-radius: 12px;
+    font-family: 'Open Sans';
+    font-size: 18px;
+    font-weight: 600;
+    margin: 30px auto;
+    cursor: pointer;
+    /*ACTIVE*/
+    background-color: $orange;
+    color: $white;
+    box-shadow: 0 1px 6px 0 rgba(0, 0, 0, 0.32);
+
+    &--container {
+        display: flex;
+    }
+
+    &--icon {
+        display: inline-block;
+        margin-right: 5px;
+    }
+}
+
+/*INACTIVE*/
+.form__button--inactive {
+    background-color: #d5d5d5;
+    box-shadow: none;
 }
 
 .share__button {
-  width: 118px;
-  height: 30px;
-  border: none;
-  border-radius: 3px;
-  margin: 10px 104px 30px 114px;
-  background-color: $azure;
-  color: $white;
-  box-shadow: 0 0px 4px 0 rgba(0, 0, 0, 0.32);
-  cursor: pointer;
+    width: 118px;
+    height: 30px;
+    border: none;
+    border-radius: 3px;
+    margin: 10px 104px 30px 114px;
+    background-color: $azure;
+    color: $white;
+    box-shadow: 0 0px 4px 0 rgba(0, 0, 0, 0.32);
+    cursor: pointer;
+    &--icon {
+        display: inline-block;
+        margin-right: 5px;
+    }
 }
 
 .notification {
-  font-family: 'Open Sans';
-  font-weight: 600;
-  text-align: center;
-  margin-top: 20px;
-  border-bottom: 1px solid $white-two;
+    font-family: 'Open Sans';
+    font-weight: 600;
+    text-align: center;
+    margin-top: 20px;
+    border-bottom: 1px solid $white-two;
 
-  & p {
-    font-size: 18px;
-    color: $gunmetal;
-  }
+    & p {
+        font-size: 18px;
+        color: $gunmetal;
+    }
 
-  .response__url {
-    font-size: 12px;
-    color: $orange;
-    padding-top: 5px;
-    padding-bottom: 10px;
-  }
-  .share__button {
-    width: 181px;
-    height: 30px;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 20px;
-    color: $white;
-    margin: auto;
-    margin-bottom: 30px;
-  }
-  .share__icon {
-    color: $white;
-  }
+    .response__url {
+        font-size: 12px;
+        color: $orange;
+        padding-top: 5px;
+        padding-bottom: 10px;
+    }
+    .share__button {
+        width: 181px;
+        height: 30px;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 20px;
+        color: $white;
+        margin: auto;
+        margin-bottom: 30px;
+    }
+    .share__icon {
+        color: $white;
+    }
 }
